# rasputin-omnitool

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  orbi_discovery_2026-05-08.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  catalog_entry.md  feature_request.md
.github/workflows/: tests.yml
become_manus/: __init__.py  __main__.py  analytics_smoke.py  bakeoff.py  browser_workflow_e2e.py  capability_matrix.py  coding_agents_smoke.py  deliverables.py  license_review.py  mail_smoke.py  mobile_smoke.py  research_pipeline.py  runtime_e2e.py  sandbox_hosting.py  sandbox_smoke.py  webapp_smoke.py  workflow_smoke.py
become_manus_kernel/: __init__.py  __main__.py  _venv_helpers.py  browser_e2e.py  browser_workflow_e2e.py  catalog.py  library_smoke.py  licenses.py  licenses_manual.py  sandbox_hosting.py  smoke.py
become_manus_kernel/cli/: __init__.py  __main__.py
outputs/become-manus/: browser-workflow-e2e.json  browser-workflow-e2e.md  candidate-matrix.json  continuation-2026-04-28-2132.md  deep-research-bakeoff.json  deep-research-bakeoff.md  final-report.json  final-report.md  handoff-2026-04-28.md  license-review.json  license-review.md  manual-license-review.json  manual-license-review.md  next-phase-report.md  runtime-e2e-report.md  sandbox-bakeoff.json  sandbox-bakeoff.md  unattended-continuation-report.md
outputs/become-manus/analytics/: analytics-smoke.json
outputs/become-manus/browser-e2e/: browser-e2e.json
outputs/become-manus/browser-workflow-e2e/: browser-test-results.json  browser-workflow-e2e.json
outputs/become-manus/coding-agents/: coding-agents-smoke.json
outputs/become-manus/demo/: analysis.md  analysis.xlsx  executive_summary.html  manifest.json  presentation.pptx  source_data.csv
outputs/become-manus/mail/: mail-smoke.json
outputs/become-manus/mobile/: mobile-smoke.json
outputs/become-manus/research-pipeline/: research-pipeline-e2e.json  research-pipeline-e2e.md
outputs/become-manus/runtime-e2e/: crawl4ai-crawl-payload.json  crawl4ai-extracted.md  crawl4ai-fixture-crawl.json  crawl4ai-fixture-crawl.md  (+7 more)
rasputin_omnitool/: __init__.py  __main__.py  bakeoff.py  catalog.py  deliverables.py  library_smoke.py  licenses.py  licenses_manual.py
rasputin_omnitool/cli/: __init__.py  __main__.py
tests/: test_become_manus_toolkit.py  test_kernel.py
(+29 files in other folders)
