[project]
name = "become_manus_kernel"
version = "0.1.0"
description = "OSS capability catalog, license review, and library smoke for Manus-equivalent agent stacks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Joshua Cartu"}]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
docling = ["docling>=2.0"]
crawl4ai = ["crawl4ai>=0.6"]
playwright = ["playwright>=1.50"]
dev = ["pytest>=8.0", "pyflakes>=3.2"]

[project.scripts]
become-manus-kernel = "become_manus_kernel.cli.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["become_manus_kernel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
